--- a/projects-robotics.html
+++ b/projects-robotics.html
@@ -15,18 +15,23 @@
   
   <div class="menu">
     <a href="index.html">
-      <img src="images/home.png" id="home-icon" class="menu-buttons">
+        <img src="images/home.png" id="home-icon" class="menu-buttons">
     </a>
     <div class="menu-buttons-all">
         <a href="programming.html">
-          <img src="icons/programming-icon.png" id="programming-icon" class="menu-buttons">
+            <img src="icons/programming-icon.png" id="programming-icon" class="menu-buttons">
         </a>
         <a href="projects-robotics.html">
-          <img src="icons/robotics-icon.png" id="robotics-icon" class="menu-buttons">
+            <img src="icons/robotics-icon.png" id="robotics-icon" class="menu-buttons">
         </a>
-        <img src="icons/extracurriculars-icon.png" id="robotics-icon" class="menu-buttons">
-
+        <a href="extracurriculars.html">
+            <img src="icons/extracurriculars-icon.png" id="extracurriculars-icon" class="menu-buttons">
+        </a>
+        <img src="images/programming-nametag.png" id="prog-nametag" class="nametags hidden">
+        <img src="images/robotics-nametag.png" id="rob-nametag" class="nametags hidden">
+        <img src="images/extracurricular-nametag.png" id="ex-nametag" class="nametags hidden">
     </div>
+</div>
 </div>
   <div id="robotics-container">
 
